<resources>
    <string name="app_language">English</string>
    <string name="app_name">Calendar Cloner</string>
    <string name="app_version_x">Version {1}</string>
    <string name="app_author">Jeroen van Disseldorp</string>
    <string name="dateformat">yyyy-MM-dd hh:mm aa</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="main_activity_title">Calendar Cloner</string>
    <string name="main_activity">Activity</string>
    <string name="main_enabled">Run</string>
    <string name="main_configuration">Configuration</string>
    <string name="main_rules">Rules</string>
    <string name="main_rules_info">Set up your rules here</string>
    <string name="main_settings">Settings</string>
    <string name="main_settings_summary">Set up the app behavior</string>
    <string name="main_general_settings">General</string>
    <string name="main_cloning_interval">Cloning interval</string>
    <string name="main_limits">Limits</string>
    <string name="main_limit_event_limit">Event limit</string>
    <string name="main_limit_event_limit_summary">Maximize event updates per hour</string>
    <string name="main_limit_attendee_limit">Guest limit</string>
    <string name="main_limit_attendee_limit_summary">Maximize guest updates per hour</string>
    <string name="main_logging">Logging</string>
    <string name="main_log_logcat">Log to system log (logcat)</string>
    <string name="main_log_logcat_off_summary">Information is not sent to logcat</string>
    <string name="main_log_logcat_on_summary">Information is sent to logcat</string>
    <string name="main_log_memory">Log to rule log</string>
    <string name="main_log_memory_off_summary">Rule log is not active</string>
    <string name="main_log_memory_on_summary">Rule log is active</string>
    <string name="main_logtype">Log type</string>
    <string name="main_logtype_summary">Summary</string>
    <string name="main_logtype_extended">Extended logging</string>
    <string name="main_extra">Extra</string>
    <string name="main_maintenance">Maintenance</string>
    <string name="main_maintenance_summary">Calendar utilities</string>
    <string name="main_browse_events">List of events</string>
    <string name="main_browse_events_summary">Search and view your calendar events</string>
    <string name="main_duplicate_events">Remove duplicate events</string>
    <string name="main_duplicate_events_summary">Use when CC gives duplicate event errors</string>
    <string name="main_load_settings_from_file">Load settings</string>
    <string name="main_load_settings_from_file_summary">Load preferences from sdcard</string>
    <string name="main_save_settings_to_file">Save settings</string>
    <string name="main_save_settings_to_file_summary">Save preferences to sdcard</string>
    <string name="main_help">Help</string>
    <string name="main_help_info">Brief introduction</string>
    <string name="main_about">About</string>
    <string name="main_about_info">About Calendar Cloner</string>
    <string name="main_resync_disabled">Service is disabled</string>
    <string name="main_resync_in_x_time">Starts in {1}</string>
    <string name="main_resync_not_running">Calendars unchanged</string>
    <string name="main_resync_running">Synchronization running</string>
    <string name="main_resync_running_soon">Synchronization starting</string>
    <string name="rules_activity_title">Cloner rules</string>
    <string name="rules_add_new_rule">Add new rule</string>
    <string name="rules_add_new_rule_info">Press menu to create new rules</string>
    <string name="rules_listrow_rulename">Rule name</string>
    <string name="rules_menu_add_new_rule">Add new rule</string>
    <string name="rules_menu_clone_now">Clone now</string>
    <string name="rules_menu_clone_this_rule">Execute this rule</string>
    <string name="rules_menu_delete_related_clones">Delete related clones</string>
    <string name="rules_menu_delete_rule">Delete rule</string>
    <string name="rules_menu_rule_log">Show rule log</string>
    <string name="rule_activity_title">Rule settings</string>
    <string name="rule_general_settings">General settings</string>
    <string name="rule_enabled">Enabled</string>
    <string name="rule_name">Rule name</string>
    <string name="rule_name_info">Give this rule a name</string>
    <string name="rule_select_calendar">Select calendar</string>
    <string name="rule_no_selection">No selection</string>
    <string name="rule_no_calendars_found">No suitable calendars found</string>
    <string name="rule_calendar_with_no_name">Unnamed calendar</string>
    <string name="rule_method">Method</string>
    <string name="rule_method_aggregate">Aggregate</string>
    <string name="rule_method_clone">Clone</string>
    <string name="rule_method_move">Move</string>
    <string name="rule_source_calendar">Source calendar</string>
    <string name="rule_destination_calendar">Destination calendar</string>
    <string name="rule_options">Options</string>
    <string name="rule_event_selection_options">Select events</string>
    <string name="rule_event_selection_options_info">Select which events to clone</string>
    <string name="rule_period_selection_options">Period</string>
    <string name="rule_sync_period_before">Past events</string>
    <string name="rule_sync_period_after">Future events</string>
    <string name="rule_sync_period_limited">The sync period is limited for this rule type</string>
    <string name="rule_clone_selection_options">Special</string>
    <string name="rule_include_clones">Clones from other rules</string>
    <string name="rule_include_clones_off_summary">Only original events are processed</string>
    <string name="rule_include_clones_on_summary">Clones from other calendars are also processed</string>
    <string name="rule_content_selection_options">Event content</string>
    <string name="rule_use_event_filters">Use event selection</string>
    <string name="rule_use_event_filters_off_summary">Clone all events</string>
    <string name="rule_use_event_filters_on_summary">Clone only filtered events</string>
    <string name="rule_event_type_filter">Event type</string>
    <string name="rule_event_type_all">All events</string>
    <string name="rule_event_type_simple">Only simple events</string>
    <string name="rule_event_type_recurring">Only recurring events</string>
    <string name="rule_event_text_filters">Text filters</string>
    <string name="rule_event_text_filters_info">Select events based on their contents</string>
    <string name="rule_title_must_contain">Title contains</string>
    <string name="rule_title_must_not_contain">Title does not contain</string>
    <string name="rule_location_must_contain">Location contains</string>
    <string name="rule_location_must_not_contain">Location does not contain</string>
    <string name="rule_description_must_contain">Description contains</string>
    <string name="rule_description_must_not_contain">Description does not contain</string>
    <string name="rule_access_level_filter">Privacy filter</string>
    <string name="rule_attendance_filter">Attendance filter</string>
    <string name="rule_availability_filter">Availability filter</string>
    <string name="rule_event_status_filter">Event status filter</string>
    <string name="rule_weekday_filter">Weekday filter</string>
    <string name="rule_content_options">Content options</string>
    <string name="rule_content_options_info">Set content for cloned events</string>
    <string name="rule_field_options">Event fields</string>
    <string name="rule_clone_title">Clone title</string>
    <string name="rule_clone_title_off_summary">Give clones custom title</string>
    <string name="rule_clone_title_on_summary">Copy original title</string>
    <string name="rule_custom_title">Title</string>
    <string name="rule_clone_location">Clone location</string>
    <string name="rule_clone_location_off_summary">Give clones custom location</string>
    <string name="rule_clone_location_on_summary">Copy original location</string>
    <string name="rule_custom_location">Location</string>
    <string name="rule_clone_description">Clone description</string>
    <string name="rule_clone_description_off_summary">Give clones custom description</string>
    <string name="rule_clone_description_on_summary">Copy original description</string>
    <string name="rule_custom_description">Description</string>
    <string name="rule_reserve_before">Reserve before</string>
    <string name="rule_reserve_after">Reserve after</string>
    <string name="rule_custom_availability">Availability</string>
    <string name="rule_custom_availability_source">Same as source event</string>
    <string name="rule_custom_access_level">Privacy</string>
    <string name="rule_custom_access_level_source">Same as source event</string>
    <string name="rule_attendance_options">Attendance</string>
    <string name="rule_clone_self_attendee_status">Clone attendance status</string>
    <string name="rule_clone_self_attendee_status_off_summary">The cloned event is always marked as accepted</string>
    <string name="rule_clone_self_attendee_status_on_summary">Your attendance/acceptance is copied to the clone</string>
    <string name="rule_clone_self_attendee_status_reverse">Attendance of clone prevails</string>
    <string name="rule_clone_self_attendee_status_reverse_off_summary">Never accept/reject source event</string>
    <string name="rule_clone_self_attendee_status_reverse_on_summary">When you accept or reject the cloned event, that status is copied back to the source event</string>
    <string name="rule_not_relevant_for_move_rules">Not applicable to move rules</string>
    <string name="rule_self_attendee_name">Your name in source calendar</string>
    <string name="rule_attendee_options">Guest lists</string>
    <string name="rule_attendee_options_info">Options for cloning guest lists</string>
    <string name="rule_clone_attendees">Clone guest list</string>
    <string name="rule_use_dummy_attendee_addresses">Don\'t send invites</string>
    <string name="rule_dummy_email_domain">Domain for fake email addresses</string>
    <string name="rule_dummy_email_domain_summary">Invites to cloned events are sent to fakeuser@{1}</string>
    <string name="rule_attendees_as_text">Guest list as text</string>
    <string name="rule_custom_attendee_options">Extra guest</string>
    <string name="rule_custom_attendee">Add custom guest</string>
    <string name="rule_custom_attendee_name">Custom guest name</string>
    <string name="rule_custom_attendee_email">Custom guest email</string>
    <string name="rule_reminder_options">Reminders</string>
    <string name="rule_reminder_options_info">Select whether to clone reminders</string>
    <string name="rule_clone_reminders">Clone reminders</string>
    <string name="rule_custom_reminder_options">Custom reminder</string>
    <string name="rule_custom_reminder">Add custom reminder</string>
    <string name="rule_custom_reminder_method">Custom reminder method</string>
    <string name="rule_custom_reminder_minutes">Custom reminder minutes</string>
    <string name="rule_additional_options">Additional options</string>
    <string name="rule_additional_options_info">Extra cloning parameters</string>
    <string name="rule_retain_clones_outside_source_event_window">Retain clones outside event window</string>
    <string name="rule_advanced_options">Advanced options</string>
    <string name="rule_hash_method">Hash method</string>
    <string name="rule_hash">Hash value</string>
    <string name="rule_readonly">Test mode</string>
    <string name="about_purchase2">Show your appreciation</string>
    <string name="dummy">Lorem ipsum dolor sit amet</string>
</resources>