<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="" >

    <PreferenceCategory android:title="@string/main_activity" >
        <SwitchPreference
            android:defaultValue="false"
            android:key="clonerEnabled"
            android:persistent="false"
            android:title="@string/main_enabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/main_configuration" >
        <Preference
            android:key="rules"
            android:persistent="false"
            android:summary="@string/main_rules_info"
            android:title="@string/main_rules" />

        <PreferenceScreen
            android:key="clonerSettingsMenu"
            android:persistent="false"
            android:summary="@string/main_settings_summary"
            android:title="@string/main_settings" >
            <PreferenceCategory android:title="@string/main_general_settings" >
                <ListPreference
                    android:key="clonerTimeWait"
                    android:persistent="false"
                    android:title="@string/main_cloning_interval" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/main_limits" >
                <ListPreference
                    android:key="eventLimit"
                    android:persistent="false"
                    android:summary="@string/main_limit_event_limit_summary"
                    android:title="@string/main_limit_event_limit" />
                <ListPreference
                    android:key="attendeeLimit"
                    android:persistent="false"
                    android:summary="@string/main_limit_attendee_limit_summary"
                    android:title="@string/main_limit_attendee_limit" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/main_logging" >
                <CheckBoxPreference
                    android:key="logToLogcat"
                    android:persistent="false"
                    android:title="@string/main_log_logcat" />
                <CheckBoxPreference
                    android:key="logToMemory"
                    android:persistent="false"
                    android:title="@string/main_log_memory" />

                <ListPreference
                    android:key="logType"
                    android:persistent="false"
                    android:summary="@string/main_logtype_summary"
                    android:title="@string/main_logtype" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/main_extra" >
        <PreferenceScreen
            android:key="maintenanceMenu"
            android:persistent="false"
            android:summary="@string/main_maintenance_summary"
            android:title="@string/main_maintenance" >
            <Preference
                android:key="browseEvents"
                android:persistent="false"
                android:summary="@string/main_browse_events_summary"
                android:title="@string/main_browse_events" />
            <Preference
                android:key="duplicateEvents"
                android:persistent="false"
                android:summary="@string/main_duplicate_events_summary"
                android:title="@string/main_duplicate_events" />
            <Preference
                android:key="loadSettingsFromFile"
                android:persistent="false"
                android:summary="@string/main_load_settings_from_file_summary"
                android:title="@string/main_load_settings_from_file" />
            <Preference
                android:key="saveSettingsToFile"
                android:persistent="false"
                android:summary="@string/main_save_settings_to_file_summary"
                android:title="@string/main_save_settings_to_file" />
        </PreferenceScreen>

        <Preference
            android:key="help"
            android:persistent="false"
            android:summary="@string/main_help_info"
            android:title="@string/main_help" />
        <Preference
            android:key="about"
            android:persistent="false"
            android:summary="@string/main_about_info"
            android:title="@string/main_about" />
    </PreferenceCategory>

</PreferenceScreen>