<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/rule_general_settings" >
        <SwitchPreference
            android:key="ruleEnabled"
            android:persistent="false"
            android:title="@string/rule_enabled" />

        <EditTextPreference
            android:key="ruleName"
            android:persistent="false"
            android:summary="@string/rule_name_info"
            android:title="@string/rule_name" />

        <ListPreference
            android:key="ruleMethod"
            android:persistent="false"
            android:title="@string/rule_method" />
        <ListPreference
            android:key="ruleSrcCalendar"
            android:persistent="false"
            android:title="@string/rule_source_calendar" />
        <ListPreference
            android:key="ruleDstCalendar"
            android:persistent="false"
            android:title="@string/rule_destination_calendar" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/rule_options" >
        <PreferenceScreen
            android:key="ruleEventSelectionOptions"
            android:persistent="false"
            android:summary="@string/rule_event_selection_options_info"
            android:title="@string/rule_event_selection_options" >
            <PreferenceCategory android:title="@string/rule_period_selection_options" >
                <ListPreference
                    android:key="ruleSyncPeriodBefore"
                    android:persistent="false"
                    android:title="@string/rule_sync_period_before" />
                <ListPreference
                    android:key="ruleSyncPeriodAfter"
                    android:persistent="false"
                    android:title="@string/rule_sync_period_after" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/rule_clone_selection_options" >
                <CheckBoxPreference
                    android:key="ruleIncludeClones"
                    android:persistent="false"
                    android:title="@string/rule_include_clones" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/rule_content_selection_options" >
                <CheckBoxPreference
                    android:key="ruleUseEventFilters"
                    android:persistent="false"
                    android:title="@string/rule_use_event_filters" />

                <ListPreference
                    android:key="ruleEventTypeFilter"
                    android:persistent="false"
                    android:title="@string/rule_event_type_filter" />

                <PreferenceScreen
                    android:key="ruleEventTextFilters"
                    android:persistent="false"
                    android:summary="@string/rule_event_text_filters_info"
                    android:title="@string/rule_event_text_filters" >
                    <EditTextPreference
                        android:key="ruleTitleMustContain"
                        android:persistent="false"
                        android:title="@string/rule_title_must_contain" />
                    <EditTextPreference
                        android:key="ruleTitleMustNotContain"
                        android:persistent="false"
                        android:title="@string/rule_title_must_not_contain" />
                    <EditTextPreference
                        android:key="ruleLocationMustContain"
                        android:persistent="false"
                        android:title="@string/rule_location_must_contain" />
                    <EditTextPreference
                        android:key="ruleLocationMustNotContain"
                        android:persistent="false"
                        android:title="@string/rule_location_must_not_contain" />
                    <EditTextPreference
                        android:key="ruleDescriptionMustContain"
                        android:persistent="false"
                        android:title="@string/rule_description_must_contain" />
                    <EditTextPreference
                        android:key="ruleDescriptionMustNotContain"
                        android:persistent="false"
                        android:title="@string/rule_description_must_not_contain" />
                </PreferenceScreen>

                <MultiSelectListPreference
                    android:key="ruleAccessLevels"
                    android:persistent="false"
                    android:title="@string/rule_access_level_filter" />
                <MultiSelectListPreference
                    android:key="ruleAttendeeStatuses"
                    android:persistent="false"
                    android:title="@string/rule_attendance_filter" />
                <MultiSelectListPreference
                    android:key="ruleAvailabilities"
                    android:persistent="false"
                    android:title="@string/rule_availability_filter" />
                <MultiSelectListPreference
                    android:key="ruleEventStatuses"
                    android:persistent="false"
                    android:title="@string/rule_event_status_filter" />
                <MultiSelectListPreference
                    android:key="ruleWeekdays"
                    android:persistent="false"
                    android:title="@string/rule_weekday_filter" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="ruleContentOptions"
            android:persistent="false"
            android:summary="@string/rule_content_options_info"
            android:title="@string/rule_content_options" >
            <PreferenceCategory android:title="@string/rule_field_options" >
                <CheckBoxPreference
                    android:key="ruleCloneTitle"
                    android:persistent="false"
                    android:title="@string/rule_clone_title" />

                <EditTextPreference
                    android:key="ruleCustomTitle"
                    android:persistent="false"
                    android:title="@string/rule_custom_title" />

                <CheckBoxPreference
                    android:key="ruleCloneLocation"
                    android:persistent="false"
                    android:title="@string/rule_clone_location" />

                <EditTextPreference
                    android:key="ruleCustomLocation"
                    android:persistent="false"
                    android:title="@string/rule_custom_location" />

                <CheckBoxPreference
                    android:key="ruleCloneDescription"
                    android:persistent="false"
                    android:title="@string/rule_clone_description" />

                <EditTextPreference
                    android:key="ruleCustomDescription"
                    android:persistent="false"
                    android:title="@string/rule_custom_description" />
                <EditTextPreference
                    android:key="ruleReserveBefore"
                    android:persistent="false"
                    android:title="@string/rule_reserve_before" />
                <EditTextPreference
                    android:key="ruleReserveAfter"
                    android:persistent="false"
                    android:title="@string/rule_reserve_after" />

                <ListPreference
                    android:key="ruleCustomAvailability"
                    android:persistent="false"
                    android:title="@string/rule_custom_availability" />
                <ListPreference
                    android:key="ruleCustomAccessLevel"
                    android:persistent="false"
                    android:title="@string/rule_custom_access_level" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/rule_attendance_options" >
                <CheckBoxPreference
                    android:key="ruleCloneSelfAttendeeStatus"
                    android:persistent="false"
                    android:title="@string/rule_clone_self_attendee_status" />
                <CheckBoxPreference
                    android:key="ruleCloneSelfAttendeeStatusReverse"
                    android:persistent="false"
                    android:title="@string/rule_clone_self_attendee_status_reverse" />

                <EditTextPreference
                    android:key="ruleSelfAttendeeName"
                    android:persistent="false"
                    android:title="@string/rule_self_attendee_name" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="ruleAttendeeOptions"
            android:persistent="false"
            android:summary="@string/rule_attendee_options_info"
            android:title="@string/rule_attendee_options" >
            <PreferenceCategory android:title="@string/rule_attendee_options" >
                <CheckBoxPreference
                    android:key="ruleCloneAttendees"
                    android:persistent="false"
                    android:title="@string/rule_clone_attendees" />
                <CheckBoxPreference
                    android:key="ruleUseDummyEmailAddresses"
                    android:persistent="false"
                    android:title="@string/rule_use_dummy_attendee_addresses" />
                <ListPreference
                    android:key="ruleDummyEmailDomain"
                    android:persistent="false"
                    android:summary="@string/rule_dummy_email_domain_summary"
                    android:title="@string/rule_dummy_email_domain" />
                <CheckBoxPreference
                    android:key="ruleAttendeesAsText"
                    android:persistent="false"
                    android:title="@string/rule_attendees_as_text" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/rule_custom_attendee_options" >
                <CheckBoxPreference
                    android:key="ruleCustomAttendee"
                    android:persistent="false"
                    android:title="@string/rule_custom_attendee" />

                <EditTextPreference
                    android:key="ruleCustomAttendeeName"
                    android:persistent="false"
                    android:title="@string/rule_custom_attendee_name" />
                <EditTextPreference
                    android:key="ruleCustomAttendeeEmail"
                    android:persistent="false"
                    android:title="@string/rule_custom_attendee_email" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="ruleReminderOptions"
            android:persistent="false"
            android:summary="@string/rule_reminder_options_info"
            android:title="@string/rule_reminder_options" >
            <PreferenceCategory android:title="@string/rule_reminder_options" >
                <CheckBoxPreference
                    android:key="ruleCloneReminders"
                    android:persistent="false"
                    android:title="@string/rule_clone_reminders" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/rule_custom_reminder_options" >
                <CheckBoxPreference
                    android:key="ruleCustomReminder"
                    android:persistent="false"
                    android:title="@string/rule_custom_reminder" />

                <ListPreference
                    android:key="ruleCustomReminderMethod"
                    android:persistent="false"
                    android:title="@string/rule_custom_reminder_method" />

                <EditTextPreference
                    android:key="ruleCustomReminderMinutes"
                    android:persistent="false"
                    android:title="@string/rule_custom_reminder_minutes" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="ruleAdditionalOptions"
            android:persistent="false"
            android:summary="@string/rule_additional_options_info"
            android:title="@string/rule_additional_options" >
            <PreferenceCategory android:title="@string/rule_additional_options" >
                <CheckBoxPreference
                    android:key="ruleRetainClonesOutsideSourceEventWindow"
                    android:persistent="false"
                    android:title="@string/rule_retain_clones_outside_source_event_window" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/rule_advanced_options" >
                <ListPreference
                    android:key="ruleHashMethod"
                    android:persistent="false"
                    android:title="@string/rule_hash_method" />

                <EditTextPreference
                    android:key="ruleHash"
                    android:persistent="false"
                    android:title="@string/rule_hash" />
                <CheckBoxPreference
                    android:key="ruleReadOnly"
                    android:persistent="false"
                    android:title="@string/rule_readonly" />
                </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>