<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/cc_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_calendarcloner" />

        <Space
            android:layout_width="10dp"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/aboutAppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/aboutAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy"
                android:textSize="16sp" />
            
            <TextView
                android:id="@+id/aboutAppAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_author"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/purchaseButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_purchase2"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/aboutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="" />
    </ScrollView>

</LinearLayout>